fixed moreSearch z-index

--- a/BJUI/themes/css/style.css
+++ b/BJUI/themes/css/style.css
@@ -244,7 +244,7 @@ th[align=right]{text-align:right;}
 #bjui-navtab > .tabsPageHeader > .tabsLeft i,
 #bjui-navtab > .tabsPageHeader > .tabsRight i,
 #bjui-navtab > .tabsPageHeader > .tabsMore i{line-height:26px; font-size:16px; text-indent:3px;}
-#bjui-navtab > .tabsMoreList{position:absolute; top:26px; right:0; z-index:1; display:none; padding:2px; width:170px; max-height:380px; overflow-x:hidden; overflow-y:auto; border-style:solid; border-width:1px;}
+#bjui-navtab > .tabsMoreList{position:absolute; top:26px; right:0; z-index:2; display:none; padding:2px; width:170px; max-height:380px; overflow-x:hidden; overflow-y:auto; border-style:solid; border-width:1px;}
 #bjui-navtab > .tabsMoreList > li{display:block; height:23px; line-height:21px; overflow:hidden;}
 #bjui-navtab > .tabsMoreList > li a{display:block; padding:0 10px; height:21px; white-space:nowrap; line-height:21px;}
 #bjui-navtab > .tabsMoreList > li a:hover{text-decoration:none;}
